--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,32 @@
-Flask==2.1.2
-Flask-Cors==3.0.10
-Flask-JWT-Extended==4.4.1
-SQLAlchemy==1.3.22
-sqlalchemy-filters==0.12.0
-PyMySQL==1.0.2
-PyYAML==6.0
-pytz==2021.3
-bcrypt==3.2.2
+alembic==1.13.1
+pyopenssl==24.0.0
+certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
+Click==8.1.7
+cryptography==41.0.5
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+Mako==1.3.2
+MarkupSafe==2.1.5
+pip==10.0.1
+pycparser==2.21
+python-dateutil==2.8.2
+python-editor==1.0.4
+requests==2.31.0
+setuptools==58.1.0
+six==1.16.0
+urllib3==2.2.0
+Werkzeug==3.0.1
+WTForms==3.1.2
+azure-common==1.1.28
+azure-storage-blob==2.1.0
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-Session==0.8.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+msal==1.28.0
+pyodbc==5.1.0
+SQLAlchemy==2.0.30
